crates/octl-cli/tests/snapshots/envelope_snapshots__discussion_list_json.snap
---
source: crates/octl-cli/tests/envelope_snapshots.rs
expression: value
---
{
  "schema_version": 1,
  "data": {
    "discussions": [
      {
        "discussion_id": "d-pqrstuvwxy",
        "node_id": "n-0001",
        "status": "open",
        "severity": "discuss",
        "topic": "seed topic",
        "opened_at": "[TS]"
      }
    ]
  }
}
