crates/octl-cli/tests/snapshots/envelope_snapshots__discussion_list_text.snap
---
source: crates/octl-cli/tests/envelope_snapshots.rs
expression: value
---
d-0001000001	n-0001	open	discuss	seed topic
